--- a/src/main/resources/localization/ZHS/powers.json
+++ b/src/main/resources/localization/ZHS/powers.json
@@ -13,5 +13,20 @@
       "在你的回合开始时，失去 #b",
       " 层 #y集中 。 #y集中 不会变为负数。"
     ]
+  },
+  "Creative AI": {
+    "NAME": "创造性AI",
+    "DESCRIPTIONS": [
+      "在你的回合开始时，从 #b三 张随机 能力 牌中添加 #b一 张到你的手牌。共 #b",
+      " 次。",
+      " 次。"
+    ]
+  },
+  "Machine": {
+    "NAME": "机器学习",
+    "DESCRIPTIONS": [
+      "在你的回合结束时，AI会根据你的状态调整参数生成一个充能球。 共 #b",
+      " 次。"
+    ]
   }
 }
