--- a/src/main/resources/localization/ZHS/relics.json
+++ b/src/main/resources/localization/ZHS/relics.json
@@ -10,7 +10,7 @@
     "NAME": "冻结核心",
     "FLAVOR": "冻结核心是机器人冷静的一面，代表着友善和温和的力量。",
     "DESCRIPTIONS": [
-      "#b冻结核心（右） ：如果你在你的回合结束时还有空余的充能球栏位， #y生成 #b1 个 #y冰霜 充能球。"
+      "#b冻结核心（右） ：如果你在你的回合结束时还有空余的充能球栏位且没有 #y集中 ， #y生成 #b1 个 #y冰霜 充能球。"
     ]
   }
 }
