--- a/src/main/resources/localization/ZHS/cards.json
+++ b/src/main/resources/localization/ZHS/cards.json
@@ -82,8 +82,8 @@
   },
   "SuperRobot:Machine Awakening": {
     "NAME": "机器觉醒",
-    "DESCRIPTION": "失去所有的 机器学习 。每回合结束时根据AI结果 生成 当前充能球上限数量一半的充能球。 NL 虚无 。",
-    "UPGRADE_DESCRIPTION": "失去所有的 机器学习 。每回合结束时根据AI结果 生成 当前充能球上限数量一半的充能球。"
+    "DESCRIPTION": "失去所有的 机器学习 。获得等量的 集中 。每回合结束时根据AI结果 生成 当前充能球上限数量一半的充能球。 NL 虚无 。",
+    "UPGRADE_DESCRIPTION": "失去所有的 机器学习 。获得等量的 集中 。每回合结束时根据AI结果 生成 当前充能球上限数量一半的充能球。"
   },
   "Recycle": {
     "NAME": "回收",
